Add static extraction blurb

--- a/posts/styling-themes.mdx
+++ b/posts/styling-themes.mdx
@@ -716,6 +716,11 @@ I'm excited about the tooling we can build to make Theme UI better integrate wit
 things with Gatsby and the greater ecosystem as a whole. WYSIWYGs for theme editing, more
 layout handling, and even full-fledged UI libraries.
 
+Static analysis is another interesting thing, and is something we could build into Gatsby.
+For usages of CSS in JS and Theme UI that don't need a runtime features we could extract into
+static CSS (potentially even functional CSS so it's more human readable). Inspiration for this
+approach would be [linaria](https://github.com/callstack/linaria).
+
 ## Conclusion
 
 I'm very excited about what Theme UI brings to the table. There's definitely some magic there,
