Fix journal wording

--- a/pages/journal.mdx
+++ b/pages/journal.mdx
@@ -1,6 +1,6 @@
 # Journal
 
-My journal is a chronological stream of thoughts and writing that
-don't quite fit into notes and aren't evergreen like essays.
+My journal is a chronological stream of thoughts that doesn't
+quite fit into [notes](/txt/) and aren't evergreen like [essays](/writing).
 
 - [Component shadowing with theme composition in Gatsby](/journal/88888888-component-shadowing-with-theme-composition-in-gatsby)
