Add another blurb

--- a/pages/journal/88888887-blocks-desktop.mdx
+++ b/pages/journal/88888887-blocks-desktop.mdx
@@ -43,9 +43,7 @@ So far I'm really digging the overall simplicity of the app and the architecture
 
 ## React Hooks
 
-Being a proof of concept, I've kept nearly all the logic in `src/index.js` for rendering and am using hooks. At Compositor we'd written similar logic before
-
-for Iso and it's wild how much simpler it gets when composing hooks.
+Being a proof of concept, I've kept nearly all the logic in `src/index.js` for rendering and am using hooks. One massive file! At Compositor we'd written similar logic before for Iso and it's wild how much simpler it gets when composing hooks.
 
 To handle all directory listings, navigation, and file selection I have a handful of pieces of state:
 
