Prettier all the things

--- a/pages/journal.mdx
+++ b/pages/journal.mdx
@@ -3,5 +3,5 @@
 My journal is a chronological stream of thoughts that doesn't  
 quite fit into [notes](/txt/) and aren't evergreen like [essays](/writing).
 
-*   [Blocks desktop](/journal/88888887-blocks-desktop)
-*   [Component shadowing with theme composition in Gatsby](/journal/88888888-component-shadowing-with-theme-composition-in-gatsby)
+- [Blocks desktop](/journal/88888887-blocks-desktop)
+- [Component shadowing with theme composition in Gatsby](/journal/88888888-component-shadowing-with-theme-composition-in-gatsby)
