--- a/posts/composition-over-configuration.mdx
+++ b/posts/composition-over-configuration.mdx
@@ -20,7 +20,7 @@ const newThing = {
 }
 ```
 
-##### Or [functional composition](https://en.wikipedia.org/wiki/Function_composition_(computer_science)):
+##### Or [functional composition](<https://en.wikipedia.org/wiki/Function_composition_(computer_science)>):
 
 ```js
 f(g(x))
