--- a/posts/github-actions-with-lerna.mdx
+++ b/posts/github-actions-with-lerna.mdx
@@ -49,7 +49,7 @@ sounds like a lot. Especially if you factor in the cost
 of context shifts and that 15 minutes really means 60
 minutes in developer time due to that context shift.
 
-*tl;dr* it saves substantial time for project maintainers
+_tl;dr_ it saves substantial time for project maintainers
 while improving the end experience for library users.
 
 ## Let's get started
@@ -191,10 +191,10 @@ Thanks to the GitHub team for building Actions.
 Thankts to [Tim Neutkens][tim] and [Chris Biscardi][chris]
 for motivating me to start using this worklow.
 
-[Actions]: https://github.com/features/actions
+[actions]: https://github.com/features/actions
 [actions/npm]: https://github.com/actions/npm
 [chris]: https://twitter.com/chrisbiscardi
-[Gatsby]: https://gatsbyjs.org
+[gatsby]: https://gatsbyjs.org
 [gatsby-mdx]: https://github.com/christopherbiscardi/gatsby-mdx
 [johno/actions-yarn]: https://github.com/johno/actions-yarn
 [lerna]: https://lernajs.io
