--- a/posts/jsx-pragma.mdx
+++ b/posts/jsx-pragma.mdx
@@ -54,11 +54,11 @@ Would result in:
 
 ```js
 const TomatoBox = React.createElement(
-  "div",
+  'div',
   {
     style: {
-      backgroundColor: "tomato",
-      padding: "20px"
+      backgroundColor: 'tomato',
+      padding: '20px'
     }
   },
   "I'm Tomato!"
@@ -95,11 +95,11 @@ babel's transpilation.
 
 ```js
 const TomatoBox = h(
-  "div",
+  'div',
   {
     style: {
-      backgroundColor: "tomato",
-      padding: "20px"
+      backgroundColor: 'tomato',
+      padding: '20px'
     }
   },
   "I'm Tomato!"
