--- a/posts/presentational-context.mdx
+++ b/posts/presentational-context.mdx
@@ -30,12 +30,14 @@ parent context to control rendering at any level of its tree**.
 
 > Cascading DOM with React Context
 >
->  — [🔥🌶 Spicy Mark Dalgleish meme](https://mobile.twitter.com/markdalgleish/status/1148695292381806592)
+> — [🔥🌶 Spicy Mark Dalgleish meme](https://mobile.twitter.com/markdalgleish/status/1148695292381806592)
 
 It's akin to the following CSS (contextual styling):
 
 ```css
-.header h1 { color: rebeccapurple; }
+.header h1 {
+  color: rebeccapurple;
+}
 ```
 
 But it's a bit more nuanced.
