Fix intro to build for you

--- a/posts/build-for-you.mdx
+++ b/posts/build-for-you.mdx
@@ -8,7 +8,7 @@ tags:
   - oss
 ---
 
-Being able to build software products is an extremely powerful skill.
+Being able to build software products is an in demand and empowering skill.
 Every day you probably see numerous inefficiencies you want to
 address with this new power. Unfortunately, time is pretty limited so
 you can't address everything.
