Update resume because whoops

--- a/pages/resume.mdx
+++ b/pages/resume.mdx
@@ -13,12 +13,12 @@ My primary emphasis is the front end, where I write performant, reusable CSS/Jav
 
 ## Education
 
-Boise State University, Boise ID: Bachelor of Science, expected May 2015  
+**Boise State University, Boise ID: Bachelor of Science, May 2015**  
 _Major:_ Computer Science
 
 <br />
 
-Montana State University, Bozeman MT: Bachelor of Arts, December 2010  
+**Montana State University, Bozeman MT: Bachelor of Arts, December 2010**  
 _Major:_ Modern Languages and Literature: Hispanic Studies  
 _Graduated with High Honors_
 
