Add old remark-mdx post

--- a/pages/journal.mdx
+++ b/pages/journal.mdx
@@ -7,3 +7,4 @@ quite fit into [notes](/txt/) and aren't evergreen like [essays](/writing).
 - [Isolated Theme UI context](/journal/3-isolated-theme-ui-context)
 - [Blocks desktop](/journal/2-blocks-desktop)
 - [Component shadowing with theme composition in Gatsby](/journal/1-component-shadowing-with-theme-composition-in-gatsby)
+- [remark-mdx](/journal/0-remark-mdx)
