--- a/pages/journal.mdx
+++ b/pages/journal.mdx
@@ -1,6 +1,6 @@
 # Journal
 
-My journal is a chronological stream of thoughts that doesn't  
+My journal is a reverse chronological stream of thoughts. It doesn't
 quite fit into [notes](/txt/) and aren't evergreen like [essays](/writing).
 
 - [remark and Slate serialization](/journal/4-remark-and-slate-serialization)
