Add some more blurbs to dg post

--- a/notes/drafts/digital-garden.mdx
+++ b/notes/drafts/digital-garden.mdx
@@ -14,14 +14,14 @@ way that's unprecedented. Literally anything you'd ever want to learn
 about is a search and click away.
 
 You can stay up to date on the news, read tutorials, or see what your
-friends are up to. It's truly amazing.
+friends are up to. It's incredible.
 
-However, we've seen a massive shift in these connections and how they
-work. No longer are they quirky corners of the web. They're centralized.
-They're siloed. They're cloud-first.
+However, we've seen a massive shift in how this information is hosted,
+published, and interlinked. No longer are they quirky corners of the web.
+They're centralized. They're siloed. They're cloud-first.
 
 It's pretty common these days for someone's entire presence on the web to
-consist of a few handles on some popular social networks. This can leave
+consist of a few handles on popular social networks. This can leave
 folks stranded when the vogue social network loses favor in addition to
 other problems.
 
@@ -31,6 +31,18 @@ other problems.
   under our own domains
 - Personality is lost amongst a sea of bordered text feeds with circular
   avatars
+
+There's a particular VC-backed blog that instantly comes to mind. Many
+users have published huge collections of content only to get taken
+hostage by dark patterns in search of monetization.
+
+## The digital garden
+
+When we create content and share information we should be in control in
+how it's hosted, when it's published, and even how it's organized.
+
+To me, there's something special about the term, too. A garden is tended
+to. A garden is reorganized. A garden is personal.
 
 ## Publish early, publish often
 
