Add composing multiple mdx documents with gatsby

--- a/pages/writing.mdx
+++ b/pages/writing.mdx
@@ -19,6 +19,7 @@ usually it's technical.
 - [Generating code and the webpack loader](/generating-code-webpack-loader)
 - [Extending Gatsby plugins](/extending-gatsby-plugins)
 - [Programmatic redirects with Gatsby](/programmatic-redirects-with-gatsby)
+- [Composing multiple MDX documents with Gatsby](/composing-multiple-mdx-documents-with-gatsby)
 - [What is pragma?](/jsx-pragma)
 
 ## Tutorial
